fix(bs-templates): mobile filter collapse

--- a/public/bs-templates/templates/agenda/_sidebar.scss
+++ b/public/bs-templates/templates/agenda/_sidebar.scss
@@ -291,7 +291,7 @@
     }
   }
   
-  #collapse {
+  #collapse-filters {
     display: block;
     .open-sidebar {
       position: fixed;
